# agentic-chat-ui

./: .gitignore  AG-UI-GUIDE.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  MessageFeedback.tsx
frontend/src/components/ui/: tooltip.tsx
frontend/src/hooks/: useAgent.ts
